<resources>
    <string name="app_name">E-Lection</string>
    <string name="title_activity_admin_portal">Administrator</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="voter_id">Voter Id</string>
    <string name="app_logo">App Logo</string>
    <string name="img_symbol">Candidate Symbol For Election</string>
    <string name="once_uploaded_no_changes_can_be_made">Once Uploaded, No Changes Can Be Made</string>
    <string name="candidate_name">Candidate Name:</string>
    <string name="party">Party:</string>
    <string name="election_name">Election Name:</string>
    <string name="starting_date">Starting Date:</string>
    <string name="ending_date">Ending Date:</string>
    <string name="election_details">Election Details</string>
    <string name="election_id">Election Id:</string>
    <string name="total_number_of_candidates">Total Number Of Candidates:</string>
    <string name="enter_new_election_details">Enter New Election Details</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="submit">Submit</string>
    <string name="add_new_candidate">Add New Candidate</string>
    <string name="party_name">Party Name</string>
    <string name="choose_a_symbol">Choose A Symbol</string>
    <string name="vote">Vote</string>
</resources>
