<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_election"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_disabled"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context="com.a3solutions.e_lection.CreateElectionActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/candidate_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:text="@string/add_new_candidate"
                android:textSize="20dp"
                android:textStyle="normal|bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_candidate_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_candidate_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:hint="@string/candidate_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="#000000"
                    android:textColorHint="#999" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_party_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_party_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:hint="@string/party_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="#000000"
                    android:textColorHint="#999" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="16dp">

                <ImageView
                    android:contentDescription="@string/img_symbol"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_image_black_48dp"
                    android:id="@+id/symbol"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_xml_btn_yellow"
                    android:padding="16dp"
                    android:id="@+id/bt_choose"
                    android:text="@string/choose_a_symbol"
                    android:layout_gravity="center" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_submit"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_xml_btn_yellow"
                android:padding="16dp"
                android:text="@string/submit" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>