<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_election"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.a3solutions.e_lection.CreateElectionActivity"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:background="@color/common_google_signin_btn_text_light_disabled">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:background="#fff"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:text="@string/enter_new_election_details"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textStyle="normal|bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_election_name"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:textColorHint="#999"
                android:textColor="#000000"
                android:id="@+id/et_election_name"
                android:layout_gravity="center_horizontal"
                android:hint="@string/election_name"
                android:maxLines="1"
                android:inputType="text"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_start"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:textColorHint="#999"
                android:textColor="#000000"
                android:id="@+id/et_start"
                android:layout_gravity="center_horizontal"
                android:hint="@string/start_date"
                android:focusable="false"
                android:maxLines="1"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_end"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:textColorHint="#999"
                android:textColor="#000000"
                android:id="@+id/et_end"
                android:layout_gravity="center_horizontal"
                android:hint="@string/end_date"
                android:focusable="false"
                android:maxLines="1"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/submit"
            android:background="@drawable/selector_xml_btn_yellow"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"/>
    </LinearLayout>
</RelativeLayout>
</RelativeLayout>