<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_disabled"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.a3solutions.e_lection.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#fff"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="4dp"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/app_logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/vote"
            android:id="@+id/imageView" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_voterid"
            android:layout_width="match_parent"
            android:paddingBottom="16dp"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:textColorHint="#999"
            android:drawableStart="@mipmap/ic_account_circle_black_48dp"
            android:textColor="#000000"
            android:id="@+id/et_voterid"
            android:layout_gravity="center_horizontal"
            android:hint="@string/voter_id"
            android:maxLines="1"
            android:inputType="text"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:textColorHint="#999"
                android:drawableStart="@mipmap/ic_lock_black_48dp"
                android:textColor="#000000"
                android:id="@+id/et_password"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:maxLines="1"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:background="@drawable/selector_xml_btn_yellow"
            android:id="@+id/bt_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />
    </LinearLayout>

</RelativeLayout>
